2004-07-13  Jeff Martin  <jeff@custommonkey.org>

	* glade/custom-element.glade, Makefile.am: 

	Added arbitrary element creation page document popup menu

2004-06-21  David Malcolm  <david@davemalcolm.demon.co.uk>

	* plugin-arbitrary.c, Makefile.am: 

	Added arbitrary document creation page for File->New assistant

2004-06-17 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* docbook-common-properties.glade: Added language editing
	widget	

2004-06-17 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* string_selection_dialog.glade: Add Cancel button
	make label not translatable, since it is just a 
	placeholder.	

2004-05-16  Geert Stappers  <stappers@stappers.nl>

	* ChangeLog: new file.

	* cong-file-properties.glade: Disabled translation of
	  various strings that are not displayed. (bugzilla.g.o #139814)